--- a/public/index.css
+++ b/public/index.css
@@ -17,9 +17,11 @@ blockquote {
 body {
     margin-bottom: 20px;
 }
-ul,li{
+
+ul, li {
     list-style-type: none;
 }
+
 a {
     text-decoration: none;
 }
@@ -28,23 +30,28 @@ header {
     width: 60%;
     margin: 20px auto;
 }
-header:after{
+
+header:after {
     content: '';
     clear: both;
     display: table;
 }
-header .user_right{
+
+header .user_right {
     float: right
 }
-header .user_right .active{
+
+header .user_right .active {
     color: #5FB878;
     background: #fff;
     border: 1px solid #5FB878;
     box-shadow: 0 5px 5px #ccc;
 }
+
 header .user_name {
     float: left
 }
+
 .user_name {
     font-size: 20px;
 }
@@ -61,63 +68,74 @@ header .user_name {
     transition: all 0.3s;
 }
 
-.has_user a:hover,.has_user span:hover{
+.has_user a:hover, .has_user span:hover {
     color: #5FB878;
     background: #fff;
     border: 1px solid #5FB878;
     box-shadow: 0 5px 5px #ccc;
 }
 
-.posts{
-    border-radius: 4px; 
+.posts {
+    border-radius: 4px;
     border: 1px solid #ddd;
 }
-.posts > li{
+
+.posts > li {
     padding: 10px;
     position: relative;
     padding-bottom: 40px;
 }
-.posts .comment_pv{
+
+.posts .comment_pv {
     position: absolute;
     bottom: 5px;
     right: 10px;
 }
-.posts .author{
+
+.posts .author {
     position: absolute;
     left: 10px;
     bottom: 5px;
-    font-size:0;
+    font-size: 0;
 }
-.posts .author span{
+
+.posts .author span {
     margin-right: 5px;
     font-size: 16px;
 }
+
 .posts > li:hover {
     background: #f2f2f2;
 }
-.posts > li:hover pre{
+
+.posts > li:hover pre {
     border: 1px solid #666;
 }
-.posts > li:hover .content{
+
+.posts > li:hover .content {
     border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
 }
-.posts > li + li{
+
+.posts > li + li {
     border-top: 1px solid #ddd;
 }
-.posts li .title span{
+
+.posts li .title span {
     position: absolute;
     left: 10px;
     top: 10px;
     color: #5FB878;
     font-size: 14px;
 }
-.posts li .title{
-     margin-left: 40px;
-     font-size: 20px;
-     color: #222;
+
+.posts li .title {
+    margin-left: 40px;
+    font-size: 20px;
+    color: #222;
 }
-.posts .userAvator{
+
+.posts .userAvator {
     position: absolute;
     left: 3px;
     top: 3px;
@@ -125,16 +143,18 @@ header .user_name {
     height: 40px;
     border-radius: 5px;
 }
-.posts .content{
+
+.posts .content {
     border-top: 1px solid #f2f2f2;
     border-bottom: 1px solid #f2f2f2;
-    margin: 10px 0 0 0 ;
+    margin: 10px 0 0 0;
     padding: 10px 0;
     margin-left: 40px;
     word-wrap: break-word;
     word-break: break-all;
 }
-.userMsg img{
+
+.userMsg img {
     width: 40px;
     height: 40px;
     border-radius: 5px;
@@ -142,19 +162,23 @@ header .user_name {
     vertical-align: middle;
     display: inline-block;
 }
-.userMsg span{
+
+.userMsg span {
     font-size: 18px;
-    color:#333;
+    color: #333;
     position: relative;
     top: 2px;
 }
-.posts li img{
+
+.posts li img {
     max-width: 100%;
 }
-.spost .comment_pv{
+
+.spost .comment_pv {
     position: absolute;
     top: 10px;
 }
+
 .spost .edit {
     position: absolute;
     right: 20px;
@@ -182,36 +206,44 @@ header .user_name {
     cursor: pointer;
     color: #fff;
     float: left;
-    margin-top: 20px ;
-    border:1px solid #fff;
+    margin-top: 20px;
+    border: 1px solid #fff;
 }
-.submit:hover{
+
+.submit:hover {
     background: #fff;
     color: #5FB878;
-    border:1px solid #5FB878;
+    border: 1px solid #5FB878;
 }
-.comment_list{
+
+.comment_list {
     border: 1px solid #ddd;
     border-radius: 4px;
 }
-.cmt_lists:hover{
+
+.cmt_lists:hover {
     background: #f2f2f2;
 }
-.cmt_lists + .cmt_lists{
+
+.cmt_lists + .cmt_lists {
     border-top: 1px solid #ddd;
 }
+
 .cmt_content {
     padding: 10px;
     position: relative;
     border-radius: 4px;
     word-break: break-all;
 }
-.cmt_detail{
+
+.cmt_detail {
     margin-left: 48px;
 }
-.cmt_content img{
+
+.cmt_content img {
     max-width: 100%;
 }
+
 /* .cmt_content:after {
     content: '#content';
     position: absolute;
@@ -232,13 +264,15 @@ header .user_name {
     margin-left: 5px;
     color: #1E9FFF;
 }
-.cmt_time{
+
+.cmt_time {
     position: absolute;
     font-size: 12px;
     right: 5px;
     top: 5px;
     color: #aaa
 }
+
 .form {
     margin: 0 auto;
     width: 50%;
@@ -248,15 +282,15 @@ header .user_name {
 textarea {
     width: 100%;
     height: 150px;
-    padding:10px 0 0 10px;
+    padding: 10px 0 0 10px;
     font-size: 20px;
-    border-radius: 4px;   
-	border: 1px solid #d7dde4;
+    border-radius: 4px;
+    border: 1px solid #d7dde4;
     -webkit-appearance: none;
     resize: none;
 }
 
-textarea#spContent{
+textarea#spContent {
     width: 98%;
 }
 
@@ -270,31 +304,33 @@ textarea#spContent{
     width: 60%;
     margin: 0 auto;
 }
+
 .form img.preview {
-    width:100px;
-    height:100px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     display: none;
-    margin-top:10px;
+    margin-top: 10px;
 }
+
 input {
     display: block;
     width: 100%;
     height: 35px;
     font-size: 18px;
-    padding: 6px 7px;	
-	border-radius: 4px;   
-	border: 1px solid #d7dde4;
-	-webkit-appearance: none;
+    padding: 6px 7px;
+    border-radius: 4px;
+    border: 1px solid #d7dde4;
+    -webkit-appearance: none;
 }
 
-input:focus,textarea:focus{
+input:focus, textarea:focus {
     outline: 0;
-    box-shadow: 0 0 0 2px rgba(51,153,255,.2);
+    box-shadow: 0 0 0 2px rgba(51, 153, 255, .2);
     border-color: #5cadff;
 }
 
-input:hover,input:active,textarea:hover,textarea:active{
+input:hover, input:active, textarea:hover, textarea:active {
     border-color: #5cadff;
 }
 
@@ -318,21 +354,26 @@ input:hover,input:active,textarea:hover,textarea:active{
 .author a:hover {
     color: #ec5051;
 }
-.disabled{
+
+.disabled {
     user-select: none;
     cursor: not-allowed !important;
 }
-.error{
+
+.error {
     color: #ec5051;
 }
-.success{
+
+.success {
     color: #1E9FFF;
 }
-.container{
+
+.container {
     width: 60%;
-    margin:0 auto;
+    margin: 0 auto;
 }
-.message{
+
+.message {
     position: fixed;
     top: -100%;
     left: 50%;
@@ -344,7 +385,8 @@ input:hover,input:active,textarea:hover,textarea:active{
     border-bottom-right-radius: 15px;
     z-index: 99999;
 }
-.markdown pre{
+
+.markdown pre {
     display: block;
     overflow-x: auto;
     padding: 0.5em;
@@ -352,13 +394,15 @@ input:hover,input:active,textarea:hover,textarea:active{
     border-radius: 3px;
     border: 1px solid #fff;
 }
-.markdown blockquote{
+
+.markdown blockquote {
     padding: 0 1em;
     color: #6a737d;
     border-left: 0.25em solid #dfe2e5;
     margin: 10px 0;
 }
-.markdown ul li{
+
+.markdown ul li {
     list-style: circle;
     margin-top: 5px;
 }
