--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,19 +2,19 @@
 	<div class="container">
 		<form class="form create" method="post">
 			<div>
-				<label>username：</label>
+				<label>username</label>
 				<input placeholder="please enter user name" type="text" name="name">
 			</div>
 			<div>
-				<label>password：</label>
+				<label>password</label>
 				<input placeholder="Please enter your password" class="password" type="password" name="password">
 			</div>
 			<div>
-				<label>Repeat the password：</label>
+				<label>Repeat the password</label>
 				<input placeholder="Please confirm your password" class="repeatpass" type="password" name="repeatpass">
 			</div>
 			<div>
-				<label>Upload avatar：</label>
+				<label>Upload avatar</label>
 				<input type="file" name="avator" id="avator">
 				<input type="hidden" id="avatorVal">
 				<img class="preview" alt="Preview avatar">
