--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -14,7 +14,7 @@
 					</div>
 					<a href="/posts/<%= res.id %>">
 						<div class="title">
-							<img class="userAvator" src="images/<%= res.avator %>"  alt="avator">
+							<img class="userAvator" src="images/<%= res.avatar %>"  alt="avatar">
 							<%- res.title %>
 						</div>
 						<div class="content markdown">
@@ -68,7 +68,7 @@
 									'</div>'+
 									'<a href=\"/posts/'+ val.id +'\">'+
 										'<div class=\"title\">'+
-											'<img class="userAvator" src="images/'+ val.avator +'" alt=\"avator\">'+
+											'<img class="userAvator" src="images/'+ val.avatar +'" alt=\"avatar\">'+
 											 val.title +
 										'</div>'+
 										'<div class=\"content markdown\">'+
