--- a/views/selfPosts.ejs
+++ b/views/selfPosts.ejs
@@ -13,7 +13,7 @@
 					</div>
 					<a href="/posts/<%= res.id %>">
 						<div class="title">
-							<img class="userAvator" src="images/<%= res.avator %>"  alt="avator"> 
+							<img class="userAvator" src="images/<%= res.avatar %>"  alt="avatar">
 							<%- res.title %>
 						</div>
 						<div class="content markdown">
@@ -65,7 +65,7 @@
 									'</div>'+
 									'<a href=\"/posts/'+ val.id +'\">'+
 										'<div class=\"title\">'+
-											'<img class="userAvator" src="images/' + val.avator + '" alt=\"avator\">' +
+											'<img class="userAvator" src="images/' + val.avatar + '" alt=\"avatar\">' +
 											 val.title +
 										'</div>'+
 										'<div class=\"content\">'+
